# Benchmark-template

./: .gitignore  README.md  pyproject.toml
examples/: run_huggingface_benchmark.py  run_lead_sentence_baseline.py  run_openai_benchmark.py
src/summbench/: __init__.py  dataset.py  nltk_utils.py  types.py
src/summbench/metrics/: __init__.py  composite.py  judge.py  lexical.py  selfcheck.py  semantic.py
src/summbench/models/: __init__.py  base.py  huggingface_causal.py  openai_chat.py  simple_baselines.py
src/summbench/pipeline/: __init__.py  runner.py
src/summbench/templates/: __init__.py  model_template.py
tests/: test_composite.py  test_dataset.py
